@@ -23,11 +23,13 @@ import static org.junit.jupiter.api.Assertions.*;
 public class DiscoverablePhenotypesTest {
 
      private final static HpoDiseases hpoDiseases = TestResources.hpoDiseases();
-     private final static Map<SimpleTerm, Set<SimpleTerm>> hpoToMaxoTermMap = TestResources.hpoToMaxo();
+     private final static Map<SimpleTerm, Set<SimpleTerm>> hpoToMaxoTermMap = TestResources.hpoToMaxoToy();
 
-     private final static PotentialPhenotypes potentialPhenotypes = new PotentialPhenotypes(hpoDiseases);
-     private final static ExcludedPhenotypes excludedPhenotypes = new ExcludedPhenotypes(hpoDiseases, hpoToMaxoTermMap);
+     private final static DiscoverablePhenotypes DISCOVERABLE_PHENOTYPES = new DiscoverablePhenotypes(hpoDiseases, hpoToMaxoTermMap);
 
+    /**
+     * This tests if the right disease is obtained from HpoDiseases, and if it has the correct HPO TermIds.
+     */
      @Test
      public void testFindDisease() {
          //Sanity check: can we get the right disease from HpoDiseases, and does it have the right HPO Term Ids?
@@ -37,14 +39,18 @@ public class DiscoverablePhenotypesTest {
          var disease = returnedDiseaseIdOpt.get();
          List<TermId> termIdList = disease.annotationTermIdList();
          assertEquals(13, termIdList.size());
-         assertTrue(termIdList.contains(TermId.of("HP:0006739")), "Did not find HP:0006739");
-         assertTrue(termIdList.contains(TermId.of("HP:0002863")), "Did not find HP:0002863");
-         assertTrue(termIdList.contains(TermId.of("HP:0100651")), "Did not find HP:0100651");
+         assertTrue(termIdList.contains(TermId.of("HP:0001888")), "Did not find HP:0001888");
+         assertTrue(termIdList.contains(TermId.of("HP:0001903")), "Did not find HP:0001903");
+         assertTrue(termIdList.contains(TermId.of("HP:0001873")), "Did not find HP:0001873");
      }
 
+    /**
+     *
+     * @return Sample phenopacket with one included HPO term Id and one disease Id.
+     */
     public static SamplePhenopacket getPPkt1() {
         List<TermId> presentTerms = List.of(
-                TermId.of("HP:0006739")
+                TermId.of("HP:0001888")
         );
         List<TermId> excludedTerms = List.of();
         List<TermId> diseaseIds = List.of(TermId.of("OMIM:620365"));
@@ -52,10 +58,14 @@ public class DiscoverablePhenotypesTest {
         return new SamplePhenopacket("sample1", presentTerms, excludedTerms, diseaseIds);
     }
 
+    /**
+     *
+     * @return Sample phenopacket with two included HPO term Ids and one disease Ids.
+     */
     public static SamplePhenopacket getPPkt2() {
         List<TermId> presentTerms = List.of(
-                TermId.of("HP:0006739"),
-                TermId.of("HP:0002863")
+                TermId.of("HP:0001888"),
+                TermId.of("HP:0001903")
         );
         List<TermId> excludedTerms = List.of();
         List<TermId> diseaseIds = List.of(TermId.of("OMIM:620365"));
@@ -63,49 +73,61 @@ public class DiscoverablePhenotypesTest {
         return new SamplePhenopacket("sample1", presentTerms, excludedTerms, diseaseIds);
     }
 
+    /**
+     * We expect this to cause an error, because OMIM:123456 is not aa actual identifier
+     * @return Sample phenopacket with one included HPO term Id and one dummy disease Id.
+     */
     public static SamplePhenopacket getPPktEmptyDisease() {
         List<TermId> presentTerms = List.of(
-                TermId.of("HP:0006739")
+                TermId.of("HP:0001888")
         );
         List<TermId> excludedTerms = List.of();
-        List<TermId> diseaseIds = List.of();
+        List<TermId> diseaseIds = List.of(TermId.of("OMIM:123456"));
 
         return new SamplePhenopacket("sample2", presentTerms, excludedTerms, diseaseIds);
     }
 
+
+    /**
+     * This tests getting the discoverable phenotypes for the sample phenopacket with one included HPO term.
+     */
     @Test
     public void testDiscoverablePhenotypes1() {
          // Get excluded phenotypes given phenopacket
          SamplePhenopacket s1 = getPPkt1();
-         TermId targetId = s1.diseaseIds().get(0);
-         Set<TermId> potentialPhenotypeIds = potentialPhenotypes.getPotentialPhenotypeIds(s1, targetId);
-         Set<TermId> excludedPhenotypeIds = excludedPhenotypes.getExcludedPhenotypeIds(s1, targetId);
-         Set<TermId> discoverablePhenotypeIds = DiscoverablePhenotypes.getDiscoverablePhenotypeIds(
-                potentialPhenotypeIds,
-                excludedPhenotypeIds);
-//         System.out.println(potentialPhenotypeIds);
-//         System.out.println(excludedPhenotypeIds);
+         TermId targetId = s1.diseaseIds().getFirst();
+         Set<TermId> discoverablePhenotypeIds = DISCOVERABLE_PHENOTYPES.getDiscoverablePhenotypeIds(
+                s1,
+                targetId);
 //         System.out.println(discoverablePhenotypeIds);
          // HPO term in phenopacket can be ascertained by 2 Maxo terms (MAXO:0000671 and MAXO:0000691)
          // 67 total HPO terms can ascertained by both Maxo terms
-         assertEquals(10, discoverablePhenotypeIds.size());
+         assertEquals(11, discoverablePhenotypeIds.size());
      }
 
     public sealed interface TestOutcome {
-        record Ok(int nExludedTerms) implements TestOutcome {}
-//        record Error(Supplier<? extends PhenolRuntimeException> exceptionSupplier) implements TestOutcome {}
+        record Ok(int nExcludedTerms) implements TestOutcome {}
+        record Error(Supplier<? extends PhenolRuntimeException> exceptionSupplier) implements TestOutcome {}
     }
 
     public record TestIndividual(String description, SamplePhenopacket myPPkt, TestOutcome expectedOutcome) {}
 
+    /**
+     *
+     * @return Stream of individual test results for 2 tests: discoverable phenotypes for ppkt with 1 HPO term,
+     * and discoverable phenotypes for ppkt with 2 HPO terms.
+     */
     private static Stream<TestIndividual> testGetIndividualDiseaseIds() {
         return Stream.of(
                 new TestIndividual("46 year old female, infantile onset (1 term)",
                         getPPkt1(),
-                        new TestOutcome.Ok(10)),
+                        new TestOutcome.Ok(11)),
                 new TestIndividual("46 year old female, infantile onset (2 terms)",
                         getPPkt2(),
-                        new TestOutcome.Ok(10))
+                        new TestOutcome.Ok(10)),
+                new TestIndividual("No disease id",
+                        getPPktEmptyDisease(),
+                        new TestOutcome.Error(() -> new PhenolRuntimeException("No disease id found")))
         );
     }
 
@@ -113,25 +135,16 @@ public class DiscoverablePhenotypesTest {
     @MethodSource("testGetIndividualDiseaseIds")
     void testEvaluateExpression(TestIndividual testCase) {
         SamplePhenopacket ppkti = testCase.myPPkt();
-        TermId targetId = ppkti.diseaseIds().get(0);
-        Set<TermId> potentialPhenotypeIds = potentialPhenotypes.getPotentialPhenotypeIds(ppkti, targetId);
-        Set<TermId> excludedPhenotypeIds = excludedPhenotypes.getExcludedPhenotypeIds(ppkti, targetId);
-        Set<TermId> discoverablePhenotypeIds = DiscoverablePhenotypes.getDiscoverablePhenotypeIds(
-                potentialPhenotypeIds,
-                excludedPhenotypeIds);
-
-//        System.out.println(potentialPhenotypeIds);
-//        System.out.println(excludedPhenotypeIds);
-//        System.out.println(discoverablePhenotypeIds);
+        TermId targetId = ppkti.diseaseIds().getFirst();
 
         switch (testCase.expectedOutcome()) {
             case TestOutcome.Ok(int expectedResult) ->
-                    assertEquals(expectedResult, discoverablePhenotypeIds.size(),
+                    assertEquals(expectedResult, DISCOVERABLE_PHENOTYPES.getDiscoverablePhenotypeIds(ppkti, targetId).size(),
                             "Incorrect evaluation for: " + testCase.description());
-//            case TestOutcome.Error(Supplier<? extends RuntimeException> exceptionSupplier) ->
-//                    assertThrows(exceptionSupplier.get().getClass(),
-//                            () -> discoverablePhenotypeIds,
-//                            "Incorrect error handling for: " + testCase.description());
+            case TestOutcome.Error(Supplier<? extends RuntimeException> exceptionSupplier) ->
+                    assertThrows(exceptionSupplier.get().getClass(),
+                            () -> DISCOVERABLE_PHENOTYPES.getDiscoverablePhenotypeIds(ppkti, targetId),
+                            "Incorrect error handling for: " + testCase.description());
         }
     }
 }
